--- a/front-end/index.html
+++ b/front-end/index.html
@@ -1,19 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <title>Junior Dev Challenge</title>
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection"/>
-
-    <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 
 <body>
-<h1>hello</h1>
-<!--Import jQuery before materialize.js-->
+<div class="container">
+    <div class="row">
+        <div class="col s12 m4">
+            <ul class="collection with-header" id="user-list">
+                <li class="collection-header"><h4>Users</h4></li>
+            </ul>
+        </div>
+        <div class="col s12 m8">
+            <!--albums-->
+        </div>
+    </div>
+</div>
+
+
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="js/materialize.min.js"></script>
+<script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
