--- a/front-end/index.html
+++ b/front-end/index.html
@@ -1,31 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Junior Dev Challenge</title>
-    <!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/html" href="front-end/css/bobstyle.css">
 </head>
 
 <body>
-<div class="container">
-    <div class="row">
-        <div class="col s12 m4">
-            <ul class="collection with-header" id="user-list">
-                <li class="collection-header"><h4>Users</h4></li>
-            </ul>
-        </div>
-        <div class="col s12 m8">
-            <!--albums-->
-        </div>
+
+    <div class="list-users col-land-4">
+        <ul data-bind="foreach: users, visible: users().length > 0">
+            <li data-bind="click: $root.onClickUser">
+                <p data-bind="text: name"></p>
+            </li>
+        </ul>
     </div>
-</div>
 
+    <div class="list-albums col-land-6" data-bind="visible: showAlbums">
+        <p data-bind="text: user"></p>
+        <select data-bind=" options: albums, 
+                            optionsText: 'title', 
+                            value: album,
+                            event: {change: onClickAlbum},
+                            optionsCaption: 'Albums'"></select>
+    </div>
 
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-<script type="text/javascript" src="js/materialize.min.js"></script>
-<script type="text/javascript" src="js/index.js"></script>
+    <div class="list-photos col-land-4">
+        <ul data-bind="foreach: photos, visible: photos().length > 0">
+            <img  data-bind="attr: { src: url, alt: title }"/>
+        </ul>
+    </div>
+
+    <footer>
+        <p class="bg-red-darkest footer ">Developed and powered by Bobby Newton</p>
+        <script src="js/lib/knockout.js"></script>
+        <script src="js/lib/jquery.min.js"></script>
+        <script src="js/index.js"></script>
+    </footer>
+
 </body>
 </html>
