--- a/front-end/index.html
+++ b/front-end/index.html
@@ -5,17 +5,19 @@
     <title>Junior Dev Challenge</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link type="text/css" rel="stylesheet" href="css/bobstyle.css" media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="css/bobstyle.css" media="screen,projection" />
 </head>
 
 <body>
 
     <div class="list-users col-land-2 col-port-2">
-        <ul data-bind="foreach: users, visible: users().length > 0">
-            <li data-bind="click: $root.onClickUser">
-                <p data-bind="text: name"></p>
-            </li>
-        </ul>
+        <div class="list-users-content">
+            <ul data-bind="foreach: users, visible: users().length > 0">
+                <li data-bind="click: $root.onClickUser">
+                    <p data-bind="text: name"></p>
+                </li>
+            </ul>
+        </div>
     </div>
 
     <div class="list-albums col-land-10 col-port-10" data-bind="visible: showAlbums">
@@ -28,15 +30,20 @@
     </div>
 
     <div class="list-photos col-land-10 col-port-10" data-bind="foreach: photos, visible: photos().length > 0">
-        <img  data-bind="attr: { src: url, alt: title, title: title }"/>
+        <img data-bind="attr: { src: url, alt: title, title: title }" />
     </div>
 
     <footer class="footer col-land-12 col-port-12">
-        <h3>Developed by Bobby Newton | bobdevop@gmail.com | GitHub: bobby-newton </h3>
+        <h3>
+            Developed by Bobby Newton |
+            <a href="mailto:bobdevop@gmail.com ">bobdevop@gmail.com | </a>
+            <a href="https://github.com/bobby-newton">GitHub: bobby-newton</a>
+        </h3>
         <script src="js/lib/knockout.js"></script>
         <script src="js/lib/jquery.min.js"></script>
         <script src="js/index.js"></script>
     </footer>
 
 </body>
+
 </html>
